[gd_scene load_steps=8 format=3 uid="uid://bcpd44ry7bhvp"]

[ext_resource type="Texture2D" uid="uid://cljkolrryqasw" path="res://Assets/wooden_sword_shield_icon.png" id="1_ao2pg"]
[ext_resource type="Script" path="res://src/Scripts/item_interactable.gd" id="1_idfgl"]

[sub_resource type="Resource" id="Resource_od5hv"]
metadata/__load_path__ = "res://src/Resources/Weapons/01_Common/Wood_Weapons/WoodSwordShield.tres"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vbb6"]
size = Vector2(10, 10)

[sub_resource type="Animation" id="Animation_sauaa"]
resource_name = "Hover"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_w2von"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsdqn"]
_data = {
"Hover": SubResource("Animation_sauaa"),
"RESET": SubResource("Animation_w2von")
}

[node name="ItemInteractable" type="Node2D" node_paths=PackedStringArray("animation_player")]
script = ExtResource("1_idfgl")
animation_player = NodePath("AnimationPlayer")
item_data = SubResource("Resource_od5hv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ao2pg")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_5vbb6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fsdqn")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
